# tinyrpc

./: CMakeLists.txt  README.md  main.cpp
.deprecated/: main.cpp
base/: CMakeLists.txt
base/include/: config.h  pool.h  protocol.h  rpcconn.h  thread.h  ts_queue.h
base/src/: config.cpp  protocol.cpp  rpcconn.cpp  thread.cpp  ts_queue.cpp
base/test/: test_ts_queue.cpp
client/: CMakeLists.txt
client/include/: client.h  rpcconn.h
client/src/: client.cpp  rpcconn.cpp
conf/: tinyrpc.json
config/: CMakeLists.txt
config/include/: config.h
config/src/: config.cpp
example/: CMakeLists.txt  echocli.cpp  echosvr.cpp  httpclient.cpp  sigdemo.cpp
example/rpccli/: hellocli.cpp
example/rpcsvr/: hello.cpp  hello.h
proxy/: CMakeLists.txt
proxy/include/: proxy.h  server.h
proxy/src/: main.cpp  proxy.cpp  server.cpp
server/: CMakeLists.txt
server/include/: proxy.h  server.h
server/src/: main.cpp  proxy.cpp  server.cpp
tinynet/: CMakeLists.txt  README.md
tinynet/include/: channel.h  conn.h  errlist.h  event.h  logger.h  net.h  poller.h  sig.h  util.h
tinynet/src/: conn.cpp  event.cpp  net.cpp  sig.cpp  util.cpp
tinyrpc/: CMakeLists.txt
tinyrpc/include/: proxy.h  server.h
tinyrpc/src/: proxy.cpp  server.cpp
